# practice-apis

./: .gitignore  README.md  THEORY.md  pyproject.toml
tests/: conftest.py
tests/api/: test_auth.py  test_cat_facts_api.py  test_create_users.py  test_delete_user.py  test_http-methods.py  test_http_methods.py  test_images.py  test_list_users.py  test_response_formats.py  test_single_user.py  test_status_code.py  test_update_user.py
